2009-01-21  Marc Singer  <elf@zealous.synapse.com>

	* Makefile (SUBLEVEL): v1.6.7 for push of new features.

	* src/drivers-lh/drv-mmc.c (mmc_report): Revised reporting to make
	it easier to troubleshoot cards.

2009-01-20  Marc Singer  <elf@zealous.synapse.com>

	* include/mmc.h (mmc_card_acquired): Revised the card acquisition
	code so that we don't assume that the first byte of the CID
	register is non-zero.  IMHO, our assumption was correct based on
	the SD association's documentation, but we found that the Eye-FI
	card has a bogus looking card ID (CID) register and we have to be
	lenient to see it.

	* Makefile (SUBLEVEL): v1.6.6 for Companion fixes so it can use a
	1.6.x version of APEX.

	* src/drivers/relocate-nand.c: Revised NAND relocator to work with
	the LPD7A404.  Considering that the only other user of the code is
	a test implemented for the LH79524, this should be safe to
	rework.  The key difference is that the relocator will address
	each page in turn instead of depending on an unreliable feature of
	NAND flash that automatically loads successive sectors.   

	* src/arch-arm/Kconfig: Changed the Companion bootstrap to use the
	NAND relocator.  This allows us to have a loader that is larger
	than 80KiB, the size of SRAM.
	Added a page size configuration option for relocation from NAND
	flash.

	* src/apex/cmd-version.c (cmd_version): Fixed display of
	environment variables s.t. the >64KiB length is properly shown in
	the version command output.

2009-01-11  Marc Singer  <elf@buici.com>

	* src/apex/cmd-image.c (cmd_image): Added an option to relocate
	the ramdisk image s.t. the uBoot image format can be loaded with
	"image load" and then used to boot the system.

2009-01-05  Marc Singer  <elf@buici.com>

	* src/mach-orion5x/mv2120_config: Moving to the CodeSourcery
	compiler for thumb support.

	* src/arch-arm/lib/cp15-invalidate-dcache-va.c
	(invalidate_dcache_va): Conditionally compiling the